--- a/app/src/main/res/menu/menuopciones.xml
+++ b/app/src/main/res/menu/menuopciones.xml
@@ -4,9 +4,8 @@
 
     <item
         android:id="@+id/opcion1"
-        android:title="@string/opcion_menu1" />
-    <item
-        android:id="@+id/opcion2"
-        android:title="@string/infertilidad_titulo1" />
+        android:icon="@drawable/map"
+        android:title="@string/opcion_menu1"
+        app:showAsAction="always" />
 
 </menu>
