--- a/app/src/main/res/menu/menuopciones.xml
+++ b/app/src/main/res/menu/menuopciones.xml
@@ -3,6 +3,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/opcion2"
+        android:icon="@drawable/analisis"
+        android:title="Item"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/opcion1"
         android:icon="@drawable/map"
         android:title="@string/opcion_menu1"
