--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,8 @@
         android:id="@+id/editText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="64dp"
+        android:backgroundTint="@android:color/darker_gray"
         android:ems="10"
         android:hint="Usuario"
         android:inputType="textPersonName"
@@ -22,7 +23,8 @@
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="36dp"
+        android:backgroundTint="@android:color/darker_gray"
         android:ems="10"
         android:hint="Contraseña"
         android:inputType="textPassword"
@@ -32,13 +34,15 @@
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="56dp"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="187dp"
+        android:layout_height="46dp"
+        android:layout_marginTop="52dp"
         android:onClick="acceder"
         android:text="acceder"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+
+        app:layout_constraintHorizontal_bias="0.452"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText2" />
 
