--- a/app/src/main/res/layout/fragment_infertilidad.xml
+++ b/app/src/main/res/layout/fragment_infertilidad.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
     android:orientation="vertical">
 
     <TextView
@@ -100,9 +101,6 @@
         </LinearLayout>
 
     </ScrollView>
-
-
-
 
 
 </LinearLayout>
