--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -74,7 +74,7 @@
         android:paddingTop="2dp"
         android:paddingBottom="2dp"
         android:scaleType="fitXY"
-        android:src="@drawable/ic_fertilizacion"
+        android:src="@drawable/ic_esperma"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
