--- a/app/src/main/res/drawable/estilo_boton.xml
+++ b/app/src/main/res/drawable/estilo_boton.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="3dp" />
-            <stroke android:width="2dp" android:color="#1B76B9"/>
+            <corners android:radius="30dp" />
+            <stroke android:width="3dp" android:color="#1173BB"/>
         </shape>
     </item>
 </selector>
