--- a/app/src/main/res/layout/fragment_infertilidad.xml
+++ b/app/src/main/res/layout/fragment_infertilidad.xml
@@ -47,8 +47,8 @@
 
             <TextView
                 android:id="@+id/txtParrafo1"
-                android:layout_width="wrap_content"
-                android:layout_height="173dp"
+                android:layout_width="match_parent"
+                android:layout_height="235dp"
                 android:text="@string/infertilidad_parrafo1" />
 
             <TextView
@@ -60,8 +60,8 @@
 
             <TextView
                 android:id="@+id/txtDef11"
-                android:layout_width="wrap_content"
-                android:layout_height="49dp"
+                android:layout_width="match_parent"
+                android:layout_height="62dp"
                 android:text="@string/infertilidad_definicion1_1" />
 
             <TextView
@@ -73,8 +73,8 @@
 
             <TextView
                 android:id="@+id/txtDef21"
-                android:layout_width="wrap_content"
-                android:layout_height="62dp"
+                android:layout_width="match_parent"
+                android:layout_height="95dp"
                 android:text="@string/infertilidad_definicion2_1" />
 
             <TextView
@@ -88,7 +88,7 @@
             <TextView
                 android:id="@+id/txtParrafo2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="256dp"
                 android:text="@string/infertilidad_parrafo2" />
 
 
