--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3385FF</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#3385FF</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorVerde">#72D55D</color>
     <color name="colorAzulClaro">#33adff</color>
