--- a/app/src/main/res/layout/fragment_genetic.xml
+++ b/app/src/main/res/layout/fragment_genetic.xml
@@ -16,4 +16,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/txtgenetic_titulo0"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/genetic_titulo0" />
+
+        <TextView
+            android:id="@+id/txtgenetic_parrafo1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/genetic_parrafo1" />
+
+    </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
