--- a/app/src/main/res/layout/fragment_hormonas.xml
+++ b/app/src/main/res/layout/fragment_hormonas.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -16,4 +17,84 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/txthorm_titulo0"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horm_titulo0" />
+
+            <TextView
+                android:id="@+id/txthorm_parrafo1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horm_parrafo1" />
+
+            <TextView
+                android:id="@+id/txthorm_parrafo2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horm_parrafo2" />
+
+            <TextView
+                android:id="@+id/txthorm_def1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horm_def1" />
+
+            <TextView
+                android:id="@+id/txthorm_def2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horm_def2" />
+            <TextView
+                android:id="@+id/txthorm_def3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horm_def3" />
+            <TextView
+                android:id="@+id/txthorm_def4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horm_def4" />
+            <TextView
+                android:id="@+id/txthorm_def5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horm_def5" />
+            <TextView
+                android:id="@+id/txthorm_def6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horm_def6" />
+            <TextView
+                android:id="@+id/txthorm_parrafo3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horm_parrafo3" />
+            <TextView
+                android:id="@+id/txthorm_tabla3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/horm_tabla3" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/tabla3" />
+
+
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
