--- a/app/src/main/res/layout/fragment_infertilidad.xml
+++ b/app/src/main/res/layout/fragment_infertilidad.xml
@@ -104,6 +104,17 @@
                 tools:ignore="VectorDrawableCompat" />
 
             <TextView
+                android:id="@+id/txt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/imageView11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/factoresinferti" />
+
+            <TextView
                 android:id="@+id/text_gallery"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
